# scotus-data-bot

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  dictionary.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
data/raw/: CHECKSUMS.sha256  extract_manifest.json
dataset/: apparatus_manifest.csv  case_name_reference.csv  dedup_review.csv  ocr_corrections.csv  scope_review.csv  validate_report.csv
db/: README.md  inspect.sql
docs/: clean-text-design.md
scotus_filter/: REVIEW_NOTES.md  fetch_text.py
src/: apparatus.py  clean.py  extract.py  load.py  materialize.py  mirror.py  ocr_suggest.py  pipeline.py  transform_legacy.py
src/transform/: __init__.py  clean_opinions.py  dedup.py  materialize.py  reselect.py  scope.py  validate.py
tests/: conftest.py  test_apparatus.py  test_clean.py  test_clean_opinions.py  test_data_quality.py  test_dedup.py  test_extract.py  test_load.py  test_materialize.py  test_mirror.py  test_ocr_suggest.py  test_pipeline.py  test_properties.py  test_reselect.py  test_scope.py  test_settings.py  test_transform.py  test_transform_legacy.py  test_validate.py
